trying to connect css with index.ejs but unsuccessful so far

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Books App</title>
-    </head>
+        <link rel="stylesheet" href="../styles/base.css" />
+        </head>
     <body>
         <h1>Hello world!</h1>
     </body>
