--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Books App</title>
-        <link rel="stylesheet" href="../styles/base.css" />
+        <link rel="stylesheet" href="./styles/base.css" />
         </head>
     <body>
         <h1>Hello world!</h1>
