--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -1,1 +1,36 @@
 <!-- show.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Book Search</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../../../public/styles/base.css">
+    </head>
+    <body>
+        <h1>Search for Books</h1>
+      <form action="">
+          <fieldset>
+              <legend>By Author</legend>
+              <label>
+                  <span>Author: </span>
+              <input type="text" name="author" />
+            </label>
+            <legend>Title</legend>
+            <label>
+                <span>Title</span>
+              <input type="text" name="title"/>
+            </label>
+              <legend>Keyword</legend>
+              <label>
+                  <span>Keyword</span>
+                  <input type="text" name="keyword">
+              </label>
+          </fieldset>
+      </form>
+        
+        <script src="" async defer></script>
+    </body>
+</html>
