created search form, connected it to results page

--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -11,24 +11,25 @@
     </head>
     <body>
         <h1>Search for Books</h1>
-      <form action="">
+      <form action="/searches">
           <fieldset>
-              <legend>By Author</legend>
+              <legend>Search by</legend>
               <label>
                   <span>Author: </span>
               <input type="text" name="author" />
             </label>
-            <legend>Title</legend>
             <label>
-                <span>Title</span>
+                <span>Title:</span>
               <input type="text" name="title"/>
             </label>
-              <legend>Keyword</legend>
               <label>
-                  <span>Keyword</span>
+                  <span>Keyword:</span>
                   <input type="text" name="keyword">
               </label>
           </fieldset>
+          <button>
+              Search The Library
+          </button>
       </form>
         
         <script src="" async defer></script>
