switch search from get to post

--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Search for Books</h1>
-      <form action="/searches">
+      <form action="/searches" method="POST">
           <fieldset>
               <legend>Search by</legend>
               <label>
