added error handler function and error.ejs view but havent confirmed if the error.ejs is working

--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,1 +1,15 @@
-<!-- error.ejs -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Books</title>
+    </head>
+    <body>
+        <header>
+          </header>
+          <main>
+              <p><%= error %></p>
+          </main>
+    </body>
+</html>
