--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -7,7 +7,7 @@
         <title>Book Search</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../../public/styles/base.css">
+        <link rel="stylesheet" href="../styles/base.css">
     </head>
     <body>
         <h1>Search for Books</h1>
