--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background: lightpink;
+    width: 480px;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+.wrapper {
+    height: 100vh;
+    background-color: lightgray;
 }
