--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Books App</title>
+        <link rel="stylesheet" href="./styles/reset.css">
         <link rel="stylesheet" href="./styles/base.css" />
         </head>
     <body>
