--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-       <h1><%= message1 %></h1>
+       <% data.forEach(book => { %>
+        <h1> <%= book.title %> </h1>
+       <% }) %>
         
         <script src="" async defer></script>
     </body>
