--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Search Results</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-       <% data.forEach(book => { %>
-        <h1> <%= book.title %> </h1>
-       <% }) %>
-        
-        <script src="" async defer></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Search Results</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
+
+<body>
+    <% data.forEach(book => { %>
+    <img src="<%= book.image_url %>" />
+    <h2> <%= book.title %> </h2>
+    <h3><%= book.author %></h3>
+    <p><%= book.description %></p>
+    <% }) %>
+
+    <script src="" async defer></script>
+</body>
+
 </html>
