added isbn13 to constructor/results page

--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -15,6 +15,7 @@
     <h2> <%= book.title %> </h2>
     <h3><%= book.author %></h3>
     <p><%= book.description %></p>
+    <p>ISBN13: <%= book.isbn13 %></p>
     <% }) %>
 
     <script src="" async defer></script>
