--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -11,7 +11,8 @@
 
 <body>
     <% data.forEach(book => { %>
-    <img src="<%= book.image_url %>" />
+        <% let imageSource =  book.image_url ? book.image_url : "https://i.imgur.com/J5LVHEL.jpg" %>
+    <img src="<%= imageSource %>" />
     <h2> <%= book.title %> </h2>
     <h3><%= book.author %></h3>
     <p><%= book.description %></p>
