--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Books App</title>
-        <link rel="stylesheet" href="./styles/reset.css">
-        <link rel="stylesheet" href="./styles/base.css" />
-        </head>
+        <%- include('../layout/head') %>
+    </head>
     <body>
-        <h1>Hello world!</h1>
+    <header>
+        <%- include('../layout/header') %>
+    </header>
+    <div class="wrapper">
+        <div class="search-heading">
+            <h2>Home</h2>
+        </div>
+       
+    </div>
+        
+        <script src="" async defer></script>
+    
+    <footer> </footer>
     </body>
 </html>
