--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Books</title>
+        <%- include('../layout/head') %>
     </head>
     <body>
         <header>
+            <%- include('../layout/header') %>
           </header>
+          <div class="wrapper">
+            <div class="search-heading">
+                <h2>An error occurred</h2>
+            </div>
           <main>
               <p><%= error %></p>
           </main>
+          </div>
     </body>
 </html>
