--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-
+<html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Search Results</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <%- include('../../layout/head') %>
     </head>
     <body>
-       <% data.forEach(book => { %>
-        <h1> <%= book.title %> </h1>
-       <% }) %>
-        
+        <header>
+            <%- include('../../layout/header') %>
+        </header>
+    <div class="wrapper">
+        <div class="search-heading">
+            <h2>Search Results</h2>
+        </div>
+        <div>
+            <% data.forEach(book => { %>
+            <h1> <%= book.title %> </h1>
+            <% }) %>
+        </div>
+    </div>
         <script src="" async defer></script>
     </body>
 </html>
