--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -2,18 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Book Search</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/reset.css">
-        <link rel="stylesheet" href="../styles/base.css">
-        <link rel="stylesheet" href="../styles/layout.css">
+        <%- include('../../layout/head') %>
     </head>
     <body>
     <header>
-        <h1>Best Books!</h1>
+        <%- include('../../layout/header') %>
     </header>
     <div class="wrapper">
         <div class="search-heading">
