stacey found another error

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <%- include('../layout/head') %>
-    </head>
+        <title>Books App</title>
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/base.css" />
+        </head>
     <body>
-    <header>
-        <%- include('../layout/header') %>
-    </header>
-    <div class="wrapper">
-        <div class="search-heading">
-            <h2>Home</h2>
-        </div>
-       
-    </div>
-        
-        <script src="" async defer></script>
-    
-    <footer> </footer>
+        <h1>Hello world!</h1>
     </body>
 </html>
