setting to database working with no duplicates and rendering to the index page

--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -17,7 +17,7 @@
             <img src="<%= imageSource %>" />
             <h2> <%= book.title %> </h2>
             <h3><%= book.author %></h3>
-            <p><%= book.description %></p>
+            <!-- <p><%= book.description %></p> -->
             <p>ISBN13: <%= book.isbn13 %></p>
             <% }) %>
         </div>
