--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,10 @@
            <ul>
                <% books.forEach(book => { %>
                   <li class="book-item">
-                     <h4>Book: <%= book.title %> </h4>
+                    <% let imageSource =  book.image_url ? book.image_url : "https://i.imgur.com/J5LVHEL.jpg" %>
+                    <img src="<%= imageSource %>" />
+                     <h2>Book: <%= book.title %> </h2>
+                     <h3><%= book.author %></h3>
                  </li>
                  <% }) %>
            </ul>
