--- a/views/pages/searches/searches.ejs
+++ b/views/pages/searches/searches.ejs
@@ -18,7 +18,16 @@
             <h2> <%= book.title %> </h2>
             <h3><%= book.author %></h3>
             <!-- <p><%= book.description %></p> -->
-            <p>ISBN13: <%= book.isbn13 %></p>
+            <!-- <p>ISBN13: <%= book.isbn13 %></p> -->
+            <form action="/add" method="POST">
+                <input type="hidden" name="title"   value='<%= book.title %>' />
+                <input type="hidden" name="author" value='<%= book.author %>' />
+                <input type="hidden"  name="description" value='<%= book.description %>'/>
+                <input type="hidden" name="isbn13" value='<%= book.isbn13 %>'/>
+                <input type="hidden"  name="imageSource" value="<%= imageSource %>" />
+                <button type="submit" class="add-to-booklist">Add to BookList</button>
+            </form>
+            
             <% }) %>
         </div>
     </div>
