--- a/views/pages/detail-view.ejs
+++ b/views/pages/detail-view.ejs
@@ -17,6 +17,7 @@
             <h3><%= book.author %></h3>
             <p><%= book.description %></p>
             <p>ISBN13: <%= book.isbn13 %></p>
+            <p>ID#: <%= book.idNumb %></p>
         </div>
     </div>
         <script src="" async defer></script>
