images working now on all pages! thanks keith!

--- a/views/pages/detail-view.ejs
+++ b/views/pages/detail-view.ejs
@@ -12,7 +12,7 @@
             <h2>Search Results</h2>
         </div>
         <div>
-            <img src="<%= book.imageSource %>" />
+            <img src="<%= book.image_url %>" />
             <h2> <%= book.title %> </h2>
             <h3><%= book.author %></h3>
             <p><%= book.description %></p>
