--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -24,7 +24,7 @@
                 <input type="hidden" name="author" value='<%= book.author %>' />
                 <input type="hidden"  name="description" value='<%= book.description %>'/>
                 <input type="hidden" name="isbn13" value='<%= book.isbn13 %>'/>
-                <input type="hidden"  name="imageSource" value="<%= imageSource %>" />
+                <input type="hidden"  name="image_url" value="<%= imageSource %>" />
                 <button type="submit" class="add-to-booklist">Add to BookList</button>
             </form>
             
