detailed page data is rendering but styles are not...no clue

--- a/views/pages/detail-view.ejs
+++ b/views/pages/detail-view.ejs
@@ -16,7 +16,7 @@
             <h2> <%= book.title %> </h2>
             <h3><%= book.author %></h3>
             <p><%= book.description %></p>
-            <p>ISBN13: <%= book.isbn13 %></p>
+            <p>ISBN13: <%= book.isbn %></p>
         </div>
     </div>
         <script src="" async defer></script>
