--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,7 @@
                     <img src="<%= imageSource %>" />
                      <h2>Book: <%= book.title %> </h2>
                      <h3><%= book.author %></h3>
+                     <a href="pages/books/<%= book.id %>">View Details</a>
                  </li>
                  <% }) %>
            </ul>
