fixed styles, and my console.log thanks to keith and ian!

--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -3,7 +3,7 @@
 <title>Best Books</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../styles/reset.css">
-<link rel="stylesheet" href="../styles/base.css">
-<link rel="stylesheet" href="../styles/layout.css">
+<link rel="stylesheet" href="/styles/reset.css">
+<link rel="stylesheet" href="/styles/base.css">
+<link rel="stylesheet" href="/styles/layout.css">
 <script src="https://kit.fontawesome.com/5ff914ec1a.js" crossorigin="anonymous"></script>
