--- a/views/pages/detail-view.ejs
+++ b/views/pages/detail-view.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <%- include('./../layout/head') %>
+        <%- include('../layout/head') %>
     </head>
     <body>
         <header>
-            <%- include('./../layout/header') %>
+            <%- include('../layout/header') %>
         </header>
     <div class="wrapper">
         <div class="search-heading">
-            <h2>Search Results</h2>
+            <h2>Details</h2>
         </div>
         <div>
             <img src="<%= book.image_url %>" />
