added edit view and /id/edit route

--- a/views/pages/edit-view.ejs
+++ b/views/pages/edit-view.ejs
@@ -9,7 +9,7 @@
         </header>
     <div class="wrapper">
         <div class="search-heading">
-            <h2>Details</h2>
+            <h2>Update Details</h2>
         </div>
         <div>
             <img src="<%= book.image_url %>" />
