oops, forgot the submit button

--- a/views/pages/edit-view.ejs
+++ b/views/pages/edit-view.ejs
@@ -34,6 +34,9 @@
                     <label for="isbn">ISBN 13</label>
                     <input type="text" name="isbn" placeholder="<%= book.isbn %>" />
                 </fieldset>
+                <button class="update-library-button">
+                    Update
+                </button>
             </form>
 
         </div>
