--- a/views/pages/searches/search.ejs
+++ b/views/pages/searches/search.ejs
@@ -8,10 +8,12 @@
     <header>
         <%- include('../../layout/header') %>
     </header>
-    <div class="wrapper">
-        <div class="search-heading">
-            <h2>Search by Title or Author</h2>
-        </div>
+<div class="wrapper">
+    <ul class="search-heading">
+        <li><a href="/">Home</a></li>
+        <li><a href="/search">Search</a></li>
+</ul>
+<h2>Search by Title or Author</h2>
       <form action="/show" method="POST">
           <fieldset>
               <label>
