--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,16 +8,18 @@
         <%- include('../layout/header') %>
     </header>
     <div class="wrapper">
-        <div class="search-heading">
-            <h2>Home</h2>
-        </div>
+        <ul class="search-heading">
+                <li><a href="/">Home</a></li>
+                <li><a href="/search">Search</a></li>
+        </ul>
+        <h2>Your Book Collection</h2>
        <section class="book-view-container">
            <ul>
                <% books.forEach(book => { %>
                   <li class="book-item">
                     <% let imageSource =  book.image_url ? book.image_url : "https://i.imgur.com/J5LVHEL.jpg" %>
-                    <img src="<%= imageSource %>" />
-                     <h2>Book: <%= book.title %> </h2>
+                    <img class="book-item-image" src="<%= imageSource %>" />
+                     <h2> <%= book.title %> </h2>
                      <h3><%= book.author %></h3>
                      <a href="pages/books/<%= book.id %>">View Details</a>
                  </li>
