--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -7,12 +7,16 @@
         <header>
             <%- include('../../layout/header') %>
         </header>
-    <div class="wrapper">
-        <div class="search-heading">
+        <div class="wrapper">
+            <ul class="search-heading">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/search">Search</a></li>
+            </ul>
             <h2>Search Results</h2>
-        </div>
-        <div>
+        <div class="search-results-container">
+            <ul>
             <% data.forEach(book => { %>
+                <li class="search-item">
                 <% let imageSource =  book.image_url ? book.image_url : "https://i.imgur.com/J5LVHEL.jpg" %>
             <img src="<%= imageSource %>" />
             <h2> <%= book.title %> </h2>
@@ -27,8 +31,9 @@
                 <input type="hidden"  name="image_url" value="<%= imageSource %>" />
                 <button type="submit" class="add-to-booklist">Add to BookList</button>
             </form>
-            
+                </li>
             <% }) %>
+            </ul>
         </div>
     </div>
         <script src="" async defer></script>
